@@ -103,6 +103,8 @@ debian-installer (trunk) UNRELEASED; urgency=low
     Closes: #311704
   * ia64 does not support rarp, remove from manual. Closes: #250028
   * Document deconf-set-selections -c to check preseed files. Closes: #284289
+  * Try to pass appropriate manual_release when building the manual in rules
+    file.
 
   [ Kurt Roeckx ]
   * Changed libdevmapper1.00-udeb to libdevmapper1.01-udeb in the monolithic
